header sevtion added in odin website

--- a/Odin-website/style.css
+++ b/Odin-website/style.css
@@ -22,9 +22,9 @@ body{
 }
 /* .links{
     /* gap: 10px; */
-    justify-content: flex-end;
+    /* justify-content: flex-end;
     display: flex;
-} */
+} */ */
 
 .main{
     display: flex;
